# libNiPass

./: CMakeLists.txt  README.md
docs/: passes.md
include/: Utils.h
include/EncPass/: EnVMFlatten.h  EncryptUtils.h  EnhancedIndirectBranch.h  EnhancedIndirectCall.h  EnhancedStringEncryption.h
src/: CMakeLists.txt  PassRegistry.cpp  Utils.cpp
src/EncPass/: EnVMFlatten.cpp  EnhancedIndirectBranch.cpp  EnhancedIndirectCall.cpp  EnhancedStringEncryption.cpp  FlatteningEnhanced.cpp
testarm64/: CMakeLists.txt  build.sh
testx86/: .gitignore  CMakeLists.txt  build.sh  run_test.sh
